--- a/SimpleChatApplication/qml.qrc
+++ b/SimpleChatApplication/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>ContactPage.qml</file>
         <file>ConversationPage.qml</file>
+        <file>ChatToolBar.qml</file>
     </qresource>
 </RCC>
